set(GALLERY_RC_DIR ${CMAKE_INSTALL_PREFIX}/${GALLERY_DIR}/rc)

install(DIRECTORY img DESTINATION ${GALLERY_RC_DIR} FILES_MATCHING PATTERN *)
install(DIRECTORY js DESTINATION ${GALLERY_RC_DIR} FILES_MATCHING PATTERN *)
install(DIRECTORY qml DESTINATION ${GALLERY_RC_DIR} FILES_MATCHING PATTERN *)
install(DIRECTORY sql DESTINATION ${GALLERY_RC_DIR} FILES_MATCHING PATTERN *)
